--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,10 +1,15 @@
 {
+  "2021-08-20": [
+    {
+      "Added a checkbox for 'Audio Round 3?'. If selected, question rows in the .csv are skipped, question slides are not inserted, and all answers are presented on a single slide.": "https://github.com/bghull/quizmaker/issues/4"
+    }
+  ],
   "2021-08-18": [
     {
-      "Text in the 'Notes' column of the .csv are now inputted to the speaker notes of each relevant slide.": "https://github.com/bghull/quizmaker/issues/2#issuecomment-901124147"
+      "Text in the 'Notes' column of the .csv is now inputted to the speaker notes of each relevant slide.": "https://github.com/bghull/quizmaker/issues/2#issuecomment-901124147"
     },
     {
-      "Answer slides are reverted to one large text box, where line breaks separate question/answer pairs and answers are bolded/accent-colored.": "https://github.com/bghull/quizmaker/issues/1#issuecomment-900770592"
+      "Answer slides are reverted to one large text box, where line breaks separate question/answer pairs and answers are bolded/accent-colored. Line-by-line animations still work as intended.": "https://github.com/bghull/quizmaker/issues/1#issuecomment-900770592"
     }
   ],
   "2021-08-16": [
